<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app_aplicacion_cargas"><b>Acreditar cargas</b>" 
electrónicas"</string>
    <string name="about_app_cargar_sube"><b>Cargar tu tarjeta</b>" 
desde tu celular"</string>
    <string name="about_app_consulta_saldo"><b>Ver saldo</b>" en 
tiempo real"</string>
    <string name="about_app_header_title">Acerca de</string>
    <string name="about_app_instruction"><b>En Carga SUBE vas a poder:</b></string>
    <string name="about_app_ultimos_viajes"><b>Revisar</b>" tu 
último viaje"</string>
    <string name="action_about_app">Acerca de</string>
    <string name="action_close_session">Cerrar sesión</string>
    <string name="action_help">Ayuda</string>
    <string name="action_last_uses">Mis movimientos</string>
    <string name="action_settings">Configuración</string>
    <string name="action_share">Compartir</string>
    <string name="after_open_form_login_button_text">INGRESAR</string>
    <string name="app_name">Carga SUBE</string>
    <string name="app_update_dialog_message">Actualizá tu app para seguir cargando desde el celular.</string>
    <string name="app_update_dialog_negative">Salir</string>
    <string name="app_update_dialog_positive">Actualizar</string>
    <string name="app_update_dialog_title">¡Nueva versión!</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.sube.cargasube</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_opening_switch_hint">En el caso de habilitar esta opción, la aplicación se abrirá automáticamente al detectar una SUBE u otro dispositivo que funcione con tecnología NFC.</string>
    <string name="auto_opening_switch_text">Abrir automáticamente</string>
    <string name="avoid_move_card">Evitá mover la tarjeta</string>
    <string name="before_open_form_login_button_text">INGRESÁ</string>
    <string name="billetera_pais_deeplink">https://ar.billeterapais.com/deeplink/sube</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="card_issue_error_message">"Tarjeta bloqueada.

Escribinos para que podamos ayudarte."</string>
    <string name="card_number_copied">N° de tarjeta copiado</string>
    <string name="card_number_label_result_message">Número de tarjeta</string>
    <string name="card_problem_error_message">"Tarjeta invalida.

Escribinos para que podamos ayudarte."</string>
    <string name="cencosud_package_name">io.gonative.android.jbwbaw</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="claro_pay_deeplink">https://claropay.com.ar/TarjetasSube</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">c42b518086d9410ba49e2a9682911ec7</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_header_title">Configuración</string>
    <string name="consulta_saldo_ats_actualizado">Se actualizó un atributo social</string>
    <string name="consulta_saldo_ats_aplicado">Se aplicó un atributo social</string>
    <string name="consulta_saldo_ats_no_actualizado">Tenés atributo social</string>
    <string name="create_account_button_text">Crear Cuenta</string>
    <string name="current_balance_result_message">Saldo actual</string>
    <string name="default_web_client_id">231716491521-vtsbigoeglh37ljmdlkb2alpj0l2kkr1.apps.googleusercontent.com</string>
    <string name="dni_id_error_digits_length">El DNI debe tener entre 5 y 8 dígitos</string>
    <string name="dont_forget_cargar_sube">¡No te olvides de volver para <b>acreditar tu saldo</b>!</string>
    <string name="during_login_button_text">INGRESANDO…</string>
    <string name="dynamic_link_domain">https://cargasubebeta.page.link</string>
    <string name="error_dialog_positive">Continuar</string>
    <string name="error_dialog_title">Intentá de nuevo</string>
    <string name="error_empty">Completá este campo</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">342504199918841</string>
    <string name="firebase_database_url">https://carga-sube-beta.firebaseio.com</string>
    <string name="form_title">Ingresá a tu cuenta</string>
    <string name="gcm_defaultSenderId">231716491521</string>
    <string name="gender_hint">Género</string>
    <string name="general_error_message">¡Ups! Volvé a intentar</string>
    <string name="google_api_key">AIzaSyD9_TcqsM-IZLQTlhWOjKDBnhEi7OV6xtw</string>
    <string name="google_app_id">1:231716491521:android:8f669cf07d2a3a07</string>
    <string name="google_crash_reporting_api_key">AIzaSyD9_TcqsM-IZLQTlhWOjKDBnhEi7OV6xtw</string>
    <string name="google_storage_bucket">carga-sube-beta.appspot.com</string>
    <string name="id_type_hint">Tipo de Documento</string>
    <string name="last_uses_token_alert">"Vas a ver los movimientos
dentro de las 24 h."</string>
    <string name="login_button_text">Ingresar</string>
    <string name="no_dni_switch_text">Tengo otro documento</string>
    <string name="password_forgotten">OLVIDÉ MI CLAVE</string>
    <string name="password_hint">Clave SUBE</string>
    <string name="results_instruction_checkout_needed">Apoyá la SUBE en el molinete al salir</string>
    <string name="results_instruction_integration_more_info">+ INFO DE RED SUBE</string>
</resources>