<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar android:id="@id/progressBarGettingData" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:progressBarStyleHorizontal" />
    <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/textViewTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/last_uses_token_alert" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
    <com.sube.cargasube.gui.login.form.sube_views.password.SubeTextInputLayoutTextPassword android:id="@id/subeTextInputLayoutTextPassword" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:hint="@string/password_hint" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:counterEnabled="true" app:counterMaxLength="4" app:endIconMode="password_toggle" app:errorEnabled="true" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/textInputEditTextPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="4" android:inputType="numberPassword" />
    </com.sube.cargasube.gui.login.form.sube_views.password.SubeTextInputLayoutTextPassword>
    <com.google.android.material.button.MaterialButton android:textColor="@color/colorSubeText" android:id="@id/buttonIngresar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/login_button_text" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:backgroundTint="@color/colorButton" app:cornerRadius="18.0dip" style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
    <TextView android:textSize="12.0sp" android:textColor="@color/colorBrand" android:layout_gravity="center_horizontal" android:id="@id/textViewKeyRecoveryUrl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="16.0dip" android:text="@string/password_forgotten" android:textAllCaps="false" />
</LinearLayout>