<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/header_layout" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:layout_weight="1.0">
        <Space android:id="@id/spaceHeader" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
        <TextView android:textSize="20.0sp" android:gravity="center" android:id="@id/textView5" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/about_app_instruction" android:layout_weight="1.0" />
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/linearLayoutAplicarCargas" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <ImageView android:id="@id/imageViewAplicarCargas" android:layout_width="wrap_content" android:layout_height="fill_parent" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_marginStart="48.0dip" app:srcCompat="@drawable/about_recharge" />
            <Space android:layout_width="20.0dip" android:layout_height="wrap_content" />
            <TextView android:textSize="17.0sp" android:gravity="center_vertical" android:id="@id/textViewAplicacionCargas" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/about_app_aplicacion_cargas" android:layout_weight="1.0" />
        </LinearLayout>
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayoutConsultarSaldo" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <ImageView android:id="@id/imageViewConsultarSaldo" android:layout_width="wrap_content" android:layout_height="fill_parent" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_marginStart="48.0dip" app:srcCompat="@drawable/about_balance" />
            <Space android:layout_width="20.0dip" android:layout_height="wrap_content" />
            <TextView android:textSize="17.0sp" android:gravity="center_vertical" android:id="@id/textViewConsultaSaldo" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/about_app_consulta_saldo" android:layout_weight="1.0" />
        </LinearLayout>
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayoutConsultarViaje" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <ImageView android:id="@id/imageViewConsultarViaje" android:layout_width="wrap_content" android:layout_height="fill_parent" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_marginStart="48.0dip" app:srcCompat="@drawable/about_last_use" />
            <Space android:layout_width="20.0dip" android:layout_height="wrap_content" />
            <TextView android:textSize="17.0sp" android:gravity="center_vertical" android:id="@id/textViewConsultaViaje" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/about_app_ultimos_viajes" android:layout_weight="1.0" />
        </LinearLayout>
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayoutCargarSube" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <ImageView android:id="@id/imageViewCargarSube" android:layout_width="wrap_content" android:layout_height="fill_parent" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_marginStart="48.0dip" app:srcCompat="@drawable/about_charge_sube" />
            <Space android:layout_width="20.0dip" android:layout_height="wrap_content" />
            <TextView android:textSize="17.0sp" android:gravity="center_vertical" android:id="@id/textViewCargarSube" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/about_app_cargar_sube" android:layout_weight="1.0" />
        </LinearLayout>
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
    </LinearLayout>
    <TextView android:textStyle="bold" android:layout_gravity="end" android:id="@id/textViewAppVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" />
</LinearLayout>