<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/coordinatorLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="24.0sp" android:textStyle="bold" android:id="@id/textViewLoginTitle" android:paddingBottom="24.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/form_title" android:layout_marginStart="4.0dip" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintStart_toStartOf="@id/guideline" app:layout_constraintTop_toBottomOf="@id/imageViewBackArrow" />
        <com.sube.cargasube.gui.login.form.sube_views.id_type.SubeTextInputLayoutSpinnerTypeId android:id="@id/subeTextInputLayoutSpinnerTypeId" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:hint="@string/id_type_hint" app:errorEnabled="true" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintStart_toStartOf="@id/guideline" app:layout_constraintTop_toBottomOf="@id/textViewLoginTitle" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
            <AutoCompleteTextView android:ellipsize="end" android:id="@id/textInputEditTextTypeId" android:nextFocusDown="@id/textInputEditTextId" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cursorVisible="false" android:singleLine="true" android:editable="false" android:inputType="none" />
        </com.sube.cargasube.gui.login.form.sube_views.id_type.SubeTextInputLayoutSpinnerTypeId>
        <com.sube.cargasube.gui.login.form.sube_views.id.SubeTextInputLayoutTextId android:id="@id/subeTextInputLayoutTextId" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" app:errorEnabled="true" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintStart_toStartOf="@id/guideline" app:layout_constraintTop_toBottomOf="@id/subeTextInputLayoutSpinnerTypeId" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:id="@id/textInputEditTextId" android:nextFocusDown="@id/textInputEditTextGender" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="number" android:textAllCaps="true" />
        </com.sube.cargasube.gui.login.form.sube_views.id.SubeTextInputLayoutTextId>
        <com.sube.cargasube.gui.login.form.sube_views.gender.SubeTextInputLayoutSpinnerGender android:id="@id/subeTextInputLayoutSpinnerGender" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:hint="@string/gender_hint" app:errorEnabled="true" app:layout_constraintEnd_toEndOf="@id/guideline2" app:layout_constraintStart_toStartOf="@id/guideline" app:layout_constraintTop_toBottomOf="@id/subeTextInputLayoutTextId" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
            <AutoCompleteTextView android:ellipsize="end" android:id="@id/textInputEditTextGender" android:nextFocusDown="@id/textInputEditTextPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cursorVisible="false" android:singleLine="true" android:editable="false" android:inputType="none" />
        </com.sube.cargasube.gui.login.form.sube_views.gender.SubeTextInputLayoutSpinnerGender>
        <com.sube.cargasube.gui.login.form.sube_views.password.SubeTextInputLayoutTextPassword android:id="@id/subeTextInputLayoutTextPassword" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:hint="@string/password_hint" app:counterEnabled="true" app:counterMaxLength="4" app:endIconMode="password_toggle" app:errorEnabled="true" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintStart_toStartOf="@id/guideline" app:layout_constraintTop_toBottomOf="@id/subeTextInputLayoutSpinnerGender" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:id="@id/textInputEditTextPassword" android:nextFocusDown="@id/materialButtonIngresar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="4" android:inputType="numberPassword" />
        </com.sube.cargasube.gui.login.form.sube_views.password.SubeTextInputLayoutTextPassword>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" />
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.9" />
        <com.google.android.material.button.MaterialButton android:id="@id/materialButtonIngresar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_button_text" app:cornerRadius="18.0dip" app:layout_constraintBottom_toTopOf="@id/switchNoDni" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/guideline" style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
        <TextView android:textSize="12.0sp" android:textColor="@color/colorBrand" android:id="@id/textViewKeyRecoveryUrl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/password_forgotten" android:textAllCaps="false" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintTop_toBottomOf="@id/subeTextInputLayoutTextPassword" />
        <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/switchNoDni" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_dni_switch_text" android:textDirection="rtl" android:layoutDirection="rtl" app:layout_constraintBottom_toTopOf="@id/progressBarLoading" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintStart_toStartOf="@id/guideline" app:switchPadding="10.0dip" />
        <androidx.constraintlayout.widget.Barrier android:id="@id/barrier2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="top" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/imageViewBackArrow" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="16.0dip" app:layout_constraintStart_toStartOf="@id/guideline" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_arrow_back_sube_dark_gray_24dp" />
        <ProgressBar android:id="@id/progressBarLoading" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="?android:progressBarStyleHorizontal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>