<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/lastUsesImageView" android:layout_width="124.0dip" android:layout_height="124.0dip" android:adjustViewBounds="true" app:srcCompat="@drawable/vehicle_train" />
    <TextView android:textSize="21.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/textViewLastUsesLocation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/current_balance_result_message" />
    <TextView android:textSize="17.0sp" android:textColor="@color/colorSubeMediumGray" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/textViewLastUsesTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_balance_result_message" android:lineSpacingMultiplier="1.2" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/lastUsesCheckoutNeeded" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/icon_error_outlined" />
        <TextView android:textSize="14.0sp" android:textColor="@color/colorBrand" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/results_instruction_checkout_needed" android:layout_marginStart="8.0dip" />
    </LinearLayout>
    <androidx.cardview.widget.CardView android:layout_gravity="center_horizontal" android:id="@id/lastUsesCardView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="33.0dip" android:layout_marginRight="24.0dip" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip">
        <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:layout_gravity="center_horizontal" android:id="@id/integrationState" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <View android:layout_gravity="center_horizontal" android:background="@color/colorSubeMediumGray" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="8.0dip" />
            <TextView android:textSize="10.0sp" android:textColor="@color/colorBrand" android:layout_gravity="end" android:id="@id/last_uses_web_view" android:paddingTop="8.0dip" android:paddingBottom="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/results_instruction_integration_more_info" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>